# rag_system

./: .env.ci  .env.default  .gitignore  Dockerfile  Dockerfile.ci  README.md  config.py  docker-compose-ci.yml  docker-compose-local.yml  docker-compose-prod.yml  main.py  pyproject.toml  requirements.txt  vector_db_task.py
.github/workflows/: ci.yml
api/common/: error.py  utils.py
api/routers/: tektome.py
api/schemas/: extract.py  ocr.py  upload.py
api/service/llm/: __init__.py  gpt35.py
api/service/storage/: __init__.py  minio_storage.py
test_files/: tektome.tif
tests/: conftest.py
tests/integration/: test_error.py  test_extract_endpoint.py  test_llm_service.py  test_minio_service.py  test_ocr_endpoint.py  test_upload_endpoint.py
tests/unit/: test_llm.py  test_storage.py  test_utils.py
